--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,7 +1,9 @@
 .header {
-    width: 95%;
+    width: 90%;
     height: 100px;
     margin: 0 auto;
+    position: relative;
+    z-index: 0;
     /* border: 1px solid tomato; */
 }
 
@@ -34,7 +36,7 @@
     position: relative;
     background-color: #f5f5f5;
     background: #fff;
-    box-shadow: 5px 5px 6px rgb(161, 161, 161);
+    box-shadow: 5px 5px 5px rgba(150, 150, 150, 0.381);
 }
 
 .link:nth-child(1) {
@@ -44,6 +46,7 @@
 .link:nth-child(1):hover {
     background: #f0dbd1;
     transition: 0.4s ease;
+    transform: scale(1.1);
 }
 
 .link:nth-child(2) {
@@ -53,6 +56,7 @@
 .link:nth-child(2):hover {
     background: #e4fdfa;
     transition: 0.4s ease;
+    transform: scale(1.1);
 }
 
 .link:nth-child(3) {
@@ -62,4 +66,5 @@
 .link:nth-child(3):hover {
     background: #f8f9d0;
     transition: 0.4s ease;
+    transform: scale(1.1);
 }
