--- a/src/app/profile/page.module.css
+++ b/src/app/profile/page.module.css
@@ -145,8 +145,8 @@
 .HistoryBox {
     width: 70%;
     height: 300px;
-    margin: 0 auto;
-    padding: 50px;
+    margin: 0 auto 50px auto;
+    padding: 50px 50px 30px 50px;
     background: #fff;
     border: 1px solid #ccc;
     box-shadow: inset 2px 2px 5px rgba(0, 0, 0, .1);
